--- a/src/components/connections/Connections.css
+++ b/src/components/connections/Connections.css
@@ -1,5 +1,6 @@
-/* Author: Susie Stanley
-Purpose: styling for all Connections pages
+/* 
+Author: Susie Stanley
+Purpose: Connection pages styling
 
 Site colors used:
 Light Blue: #c8e6ea
@@ -15,7 +16,7 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
 /* ConnectionDetail styling */
 .c-bold {
   font-weight: 600;
-  background-color: lightgray;
+  background-color: rgba(211, 211, 211, 0.619);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   padding: 7px 0px 5px 25px;
@@ -81,7 +82,7 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
 
 .connection-info__name {
   font-size: 28px;
-  font-weight: 800;
+  font-weight: 600;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -185,7 +186,7 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
 .connection-info__zodiac,
 .connection-info__personality,
 .connection-info__enneagram {
-  background-color: #c8e6ea;
+  background-color: #c8e6ea8b;
   border-radius: 5px;
   margin: 10px;
   /* border: 1px solid black; */
@@ -209,6 +210,7 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
 
 .checkbox {
   margin-right: 90px;
+  transition: all 0.2s ease-in-out;
 }
 
 .connection-icons {
@@ -226,13 +228,18 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
   margin: auto 20px;
   font-size: 16px;
   padding: 5px 10px;
-  border: 1px solid rgb(82, 207, 223);
+  border: 2px solid lightgray;
   background-color: #c8e6ea;
   border-radius: 5px;
   white-space: nowrap;
 }
 
+.connection-details:hover {
+  background-color: #c4f7fe;
+}
+
 .connection-details a {
+  font-weight: 500;
   color: #2b2b2b;
   text-decoration: none;
 }
