--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,3 +1,18 @@
+/* 
+Author: Susie Stanley
+Purpose: Sidebar/AppBar styling
+
+Site colors used:
+Light Blue: #c8e6ea
+Light Blue: #c8e6ea68 (faded)
+Dark Blue: rgb(82, 207, 223) Details button border
+Red: #D61212
+Light Gray: rgba(211, 211, 211, 0.468) Dashboard Connections header
+Dark Gray: #2b2b2b font color throughout
+Shadow: box-shadow: 5px 5px 5px lightgray;
+Bright Blue: #c4f7fe highlights, hover on links, and buttons
+*/
+
 .appbar-flex {
   background-color: white;
   padding: 10px 0px;
@@ -44,16 +59,16 @@
 .logout {
   margin: auto 20px;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
   padding: 5px 15px;
-  background-color: #efefef;
-  border: 1px solid #efefef;
+  background-color: #c8e6ea;
   border-radius: 5px;
+  border: 2px solid lightgray;
+  cursor: pointer;
 }
 
 .logout:hover {
-  /* background-color: #D61212; */
-  border: 1px solid darkgray;
+  border: 2px solid darkgray;
   background-color: #c4f7fe;
 }
 
@@ -97,7 +112,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8px 0px;
+  padding: 5px 0px;
+  margin: 0px 5px;
   list-style: none;
   height: 70px;
 }
@@ -112,12 +128,12 @@
   align-items: center;
   padding: 0px 16px;
   border-radius: 4px;
-  border: 1px solid lightgray;
+  border: 2px solid lightgray;
 }
 
 .side-text a:hover {
   background-color: #c4f7fe;
-  border: 1px solid #4feaff;
+  border: 2px solid darkgray;
 }
 
 .side-menu-items {
